--- a/style.scss
+++ b/style.scss
@@ -42,15 +42,16 @@ body {
 
 
 
-/* ビジュアル */
+// ビジュアル
 
 .visual{
+    background-size: cover;
     height: 500px;
     background-image: url(img/visual.jpg);
     position: relative;
-    background-position: -450px 0px;
+
     .visual-title {
-        color: #222;
+        color: #ccc;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -66,7 +67,7 @@ body {
 }
 
 
-/* アバウト */
+// アバウト
 
 #about{
     .about-inr{
@@ -88,7 +89,7 @@ body {
 }
 
 
-/* スキル */
+// スキル
 
 #skill{
     .skill-item {
@@ -132,7 +133,7 @@ body {
 }
 
 
-/* ワークス */
+// ワークス
 
 #works{
     .works-item {
@@ -152,7 +153,7 @@ body {
 }
 
 
-/* コンタクト */
+// コンタクト
 
 #contact{
     .contact-message{
@@ -200,14 +201,61 @@ body {
 }
 
 
-/* フッター */
+// フッター
 small{
     display: block;
     text-align: center;
 }
 
 
-/* サンクスページ */
+// ダークモード
+.dark-theme {
+    background: #15202B;
+    color: #ccc;
+    .content{
+        background: #15202B;
+    }
+    a{
+        color:#8899A6;
+    }
+    #contact{
+        ::placeholder{
+        color:#ccc;
+        }
+    }
+}
+
+
+.dark {
+    cursor: pointer;
+    position:fixed;
+    z-index: 999;
+    right: 3%;
+    top: 92%;
+}
+
+.toggle_input {
+    display: none;
+}
+.toggle_btn {
+    transition: .2s;
+}
+.toggle_btn::before {
+    font-family: 'Material Icons';
+    content: "wb_sunny";
+    font-size: 40px;
+    mix-blend-mode: difference;
+    transition: .2s;
+    
+}
+.toggle_input:checked + .toggle_btn::before {
+    content: "bedtime";
+    mix-blend-mode: difference;
+}
+
+
+
+// サンクスページ
 #thanks{
     .massage,.detail,.go-top{
         text-align:center;
@@ -218,7 +266,7 @@ small{
 
 
 
-/* ハンバーガー */
+// ハンバーガー
 
 .pc-nav  {
     display: none;
@@ -330,7 +378,7 @@ small{
 }
 
 
-/* ヘッダー */
+// ヘッダー
 
 header{
     .hamburger_btn{
@@ -368,12 +416,14 @@ header{
 }
 
 
-/* ビジュアル */
+// ビジュアル
 
 .visual{
+
     background-size: cover;
-    background-position: 0px 0px;
+    height: 500px;
     .visual-title{
+        color: #000;
         .visual-main-title{
         font-size: 60px;
         }    
@@ -384,7 +434,7 @@ header{
 }
 
 
-/* アバウト */
+// アバウト
 
 #about{
     .about-inr{
@@ -411,7 +461,7 @@ header{
 
 
 
-/* スキル */
+// スキル
 
 #skill{
     .skill-list {
@@ -427,7 +477,7 @@ header{
 }
 
 
-/* ワークス */
+// ワークス
 
 #works{
     .works-list{
@@ -444,8 +494,7 @@ header{
     }
 }
 
-
-/* コンタクトフォーム */
+// コンタクトフォーム
 
 #contact{
     form{
@@ -472,10 +521,6 @@ header{
 
 
 }
-
-
-
-
 
 
 
